<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <EditText
        android:id="@+id/addDes"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/adddes"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp"
        android:background="@drawable/desback"
        android:gravity="top"
        android:padding="10dp"
        android:textColor="#000"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/addLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDes" />
    <Button
        android:id="@+id/postButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        app:layout_constraintTop_toBottomOf="@+id/addLocation"/>
    <Button
        android:id="@+id/closeDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintTop_toBottomOf="@+id/postButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>